manual code cleanup